--- a/Arabic kb.html
+++ b/Arabic kb.html
@@ -52,7 +52,7 @@
 <center>
 
 <div class="separator" style="clear: both; text-align: center;">
-<a href="https://rawgit.com/DrRO/KB/master/index.html" target="_blank"><img border="0" height="40" src="http://3.bp.blogspot.com/-aPh6ZWfEvNs/UF9eo7WuPwI/AAAAAAAADNw/S5hIgJ9lmTg/s320/%25D8%25B2%25D8%25B1-%25D8%25A7%25D9%2586%25D8%25AC%25D9%2584%25D9%258A%25D8%25B2%25D9%2589.gif" width="100" /></a></div>
+<a href="https://rawgit.com/DrRO/KB/master/index.html"><img border="0" height="40" src="http://3.bp.blogspot.com/-aPh6ZWfEvNs/UF9eo7WuPwI/AAAAAAAADNw/S5hIgJ9lmTg/s320/%25D8%25B2%25D8%25B1-%25D8%25A7%25D9%2586%25D8%25AC%25D9%2584%25D9%258A%25D8%25B2%25D9%2589.gif" width="100" /></a></div>
 <span style="color: #cc0000; font-family: tahoma; font-size: xx-small;"> 
 <br />Click on the keyboard and after you are done copy the text and paste it<br /><br /> اضغط على لوحة المفاتيح للكتابة ،  ثم قم بنسخ النص ولصقه</span></center>
 <br />
